# hackerrank-orchestrate-june26

./: .gitignore  INTERVIEW_GUIDE.md  main.py  output.csv  pyproject.toml  verify_output.py
code/: README.md  config.yaml  main.py
code/claimreview/: __init__.py  config.py  enums.py  observation.py  prompts.py  schema.py
code/claimreview/evaluation/: __init__.py  harness.py  metrics.py
code/claimreview/preprocessing/: __init__.py  images.py  loaders.py  pipeline.py
code/claimreview/provider/: __init__.py  base.py  cache.py  litellm_provider.py  messages.py  runner.py
code/claimreview/rules/: __init__.py  decide.py  output.py
code/evaluation/: evaluation_report.md  main.py
code/tests/: test_rules.py
